<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.hoangdung.simplelocation.Fragments.SearchFragment"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:theme="@style/AppTheme"
    app:cardBackgroundColor="@color/primary"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:title="Seach here"
            android:layout_weight="1">
        </android.support.v7.widget.Toolbar>
        <ImageView
            android:id="@+id/find_direction"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_gravity="right|end"
            android:src="@drawable/ic_direction"
            android:clickable="true"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>
