...
        app:cardElevation="5dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/search_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Search Here"
                android:textColor="#000"
                android:textSize="20sp"
                android:backgroundTint="@android:color/transparent"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="5dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </android.support.v7.widget.RecyclerView>
    </android.support.v7.widget.CardView>
    </LinearLayout>
...
